# Neo-Gathering

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yaml
scripts/: benchmark.py  create_video.py  play.py  train_DQN.py
src/neo_gathering/: __init__.py  neo_gathering.py
tests/: test_create_map.py  test_env_sanity_check.py  test_observations.py  test_shortest_path.py
